# dummy-web-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
back/back/: settings.py  urls.py
back/gestion_adherents/: admin.py  apps.py  models.py  populate_database.py  serializers.py  urls.py  views.py
back/gestion_adherents/migrations/: 0001_initial.py  0002_alter_adherents_login_alter_adherents_mdp.py  0002_rename_surclassment_adherents_surclassement.py  0003_alter_adherents_no_licence_alter_adherents_nom_and_more.py  0003_rename_manager_adherents_entraineur.py  0004_entraine_ordre_alter_adherents_no_licence_and_more.py  0004_remove_matchs_id_equipe_a_matchs_equipe_a_and_more.py  0005_alter_adherents_no_licence_alter_adherents_nom_and_more.py  0005_alter_telephones_ordre_alter_telephones_remarque_and_more.py  0006_alter_adherents_poste_alter_postes_description.py  0006_remove_adherents_director.py  0007_rename_vlle_salles_ville.py  0008_alter_equipes_photo.py  0009_alter_equipes_points.py  0010_alter_equipes_defaites_alter_equipes_victoires.py  0011_alter_equipes_nulls.py  0012_alter_adherents_id_poste.py  0013_rename_idlinux_equipe_joue_id_equipe.py  0014_catalogue_coloris.py  0015_alter_salles_complement.py  0016_alter_salles_adresse.py  0017_alter_salles_code_postal_alter_salles_ville.py  (+2 more)
back/members/: models.py  serializers.py  urls.py  views.py
front/: formkit.config.js  index.html  other-tailwind-theme.js  package-lock.json  package.json  tailwind-formkit-theme.js  tailwind.config.js  vite.config.js
front/src/: App.vue  Members.vue  main.js
(+39 files in other folders)
